add nicknames to team section

--- a/page-team.html
+++ b/page-team.html
@@ -83,10 +83,11 @@
 			<!-- entry -->
 			<div class="entry entry__team">
 				<div class="entry__image" data-bg="assets/img/team-01.jpg"></div>
+				<div class="title"><span class="title-text">Steve Rogers</span></div>
 				<div class="entry__overlay">
 					<div class="entry__overlay__content" data-pos="bottom">
 						<div class="subtitle">role: <span>CEO</span></div>
-						<div class="title">Steve Rogers</div>
+						<div class="hover-title">Mojo Rojo</div>
 					</div>
 				</div>
 			</div>
@@ -94,10 +95,11 @@
 			<!-- entry -->
 			<div class="entry entry__team">
 				<div class="entry__image" data-bg="assets/img/team-02.jpg"></div>
+				<div class="title"><span class="title-text">Marco Smith</span></div>
 				<div class="entry__overlay">
 					<div class="entry__overlay__content" data-pos="bottom">
 						<div class="subtitle">role: <span>art director</span></div>
-						<div class="title">Marco Smith</div>
+						<div class="hover-title">Mojo Rojo</div>
 					</div>
 				</div>
 			</div>
@@ -105,10 +107,11 @@
 			<!-- entry -->
 			<div class="entry entry__team">
 				<div class="entry__image" data-bg="assets/img/team-03.jpg"></div>
+				<div class="title"><span class="title-text">Sonya Smith</span></div>
 				<div class="entry__overlay">
 					<div class="entry__overlay__content" data-pos="bottom">
 						<div class="subtitle">role: <span>designer</span></div>
-						<div class="title">Sonya Smith</div>
+						<div class="hover-title">Mojo Rojo</div>
 					</div>
 				</div>
 			</div>
@@ -116,10 +119,11 @@
 			<!-- entry -->
 			<div class="entry entry__team">
 				<div class="entry__image" data-bg="assets/img/team-04.jpg"></div>
+				<div class="title"><span class="title-text">Peter Cox</span></div>
 				<div class="entry__overlay">
 					<div class="entry__overlay__content" data-pos="bottom">
 						<div class="subtitle">role: <span>developer</span></div>
-						<div class="title">Peter Cox</div>
+						<div class="hover-title">Mojo Rojo</div>
 					</div>
 				</div>
 			</div>
@@ -127,10 +131,11 @@
 			<!-- entry -->
 			<div class="entry entry__team">
 				<div class="entry__image" data-bg="assets/img/team-05.jpg"></div>
+				<div class="title"><span class="title-text">Lia Wong</span></div>
 				<div class="entry__overlay">
 					<div class="entry__overlay__content" data-pos="bottom">
 						<div class="subtitle">role: <span>developer</span></div>
-						<div class="title">Lia Wong</div>
+						<div class="hover-title">Mojo Rojo</div>
 					</div>
 				</div>
 			</div>
@@ -138,10 +143,11 @@
 			<!-- entry -->
 			<div class="entry entry__team">
 				<div class="entry__image" data-bg="assets/img/team-06.jpg"></div>
+				<div class="title"><span class="title-text">Aaron Doe</span></div>
 				<div class="entry__overlay">
 					<div class="entry__overlay__content" data-pos="bottom">
 						<div class="subtitle">role: <span>editorial</span></div>
-						<div class="title">Aaron Doe</div>
+						<div class="hover-title">Mojo Rojo</div>
 					</div>
 				</div>
 			</div>
