added brand slider, new logo & remove a section from team page and client smooth scrolling

--- a/page-contact.html
+++ b/page-contact.html
@@ -12,6 +12,7 @@
 	<link rel="icon" href="assets/img/favicon.png">
 	<link rel="stylesheet" href="assets/css/assets.css">
 	<link rel="stylesheet" href="assets/css/main.css">
+	<link rel="stylesheet" href="./assets/css/custom-mohit.css">
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Work+Sans:400,500,700">
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Cardo:400,700">
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Ubuntu:400,700">
@@ -27,21 +28,21 @@
 	<!-- header -->
 	<header class="header">
 		<div class="container">
-			<a href="index.html" class="main-logo">LCB</a>
+			<a href="index.html" class="main-logo"><img src="./assets/img/lcb-dark.png" /></a>
 
 			<div class="main-nav float-right">
 				<ul class="menu">
 					<li><a href="index.html">Home</a></li>
 					<li>
 						<a href="page-contact.html#">Works</a>
-						<ul class="submenu">
+						<!--<ul class="submenu">
 							<li><a href="portfolio-2-cols.html">Two columns</a></li>
 							<li><a href="portfolio-3-cols.html">Three columns</a></li>
 							<li><a href="portfolio-4-cols.html">Four columns</a></li>
 							<li><a href="portfolio-metro.html">Metro</a></li>
 							<li><a href="portfolio-boxed.html">Boxed</a></li>
 							<li><a href="project.html">Project</a></li>
-						</ul>
+						</ul>-->
 					</li>
 					<li>
 						<a href="page-contact.html#">Pages</a>
@@ -53,7 +54,7 @@
 							<li><a href="page-404.html">Error 404</a></li>
 						</ul>
 					</li>
-					<li><a href="blog.html">Blog</a></li>
+					<!--<li><a href="blog.html">Blog</a></li>-->
 					<li><a href="page-contact.html" class="active">Contact</a></li>
 				</ul>
 			</div>
