--- a/page-team.html
+++ b/page-team.html
@@ -12,6 +12,7 @@
 	<link rel="icon" href="assets/img/favicon.png">
 	<link rel="stylesheet" href="assets/css/assets.css">
 	<link rel="stylesheet" href="assets/css/main.css">
+	<link rel="stylesheet" href="./assets/css/custom-mohit.css">
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Work+Sans:400,500,700">
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Cardo:400,700">
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Ubuntu:400,700">
@@ -27,7 +28,7 @@
 	<!-- header -->
 	<header class="header">
 		<div class="container">
-			<a href="index.html" class="main-logo">LCB</a>
+			<a href="index.html" class="main-logo"><img src="./assets/img/lcb-dark.png" /></a>
 
 			<div class="main-nav float-right">
 				<ul class="menu">
@@ -152,55 +153,6 @@
 				</div>
 			</div>
 		</div>
-	</div>
-
-	<!-- skills -->
-	<div class="skills__container" data-bg-color="#f7f7f7">
-		<div class="gap-100"></div>
-
-		<div class="container">
-			<div class="row">
-				<div class="column col-6 offset-6">
-					<h3>Our Super Skills</h3>
-
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-
-					<div class="gap-50"></div>
-
-					<div class="skills">
-						<div class="skill">
-							<div class="skill__title">Photoshop</div>
-							<div class="skill__bar">
-								<div class="skill__bar__percent" data-percent="50"></div>
-							</div>
-						</div>
-
-						<div class="skill">
-							<div class="skill__title">Illustrator</div>
-							<div class="skill__bar">
-								<div class="skill__bar__percent" data-percent="60"></div>
-							</div>
-						</div>
-
-						<div class="skill">
-							<div class="skill__title">HTML / CSS</div>
-							<div class="skill__bar">
-								<div class="skill__bar__percent" data-percent="90"></div>
-							</div>
-						</div>
-
-						<div class="skill">
-							<div class="skill__title">JavaScript</div>
-							<div class="skill__bar">
-								<div class="skill__bar__percent" data-percent="80"></div>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-
-		<div class="gap-100"></div>
 	</div>
 
 	<!-- testimonials -->
