--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 	<link rel="icon" href="assets/img/favicon.png">
 	<link rel="stylesheet" href="assets/css/assets.css">
 	<link rel="stylesheet" href="assets/css/main.css">
+	<link rel="stylesheet" href="./assets/css/custom-mohit.css">
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Work+Sans:400,500,700">
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Cardo:400,700">
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Ubuntu:400,700">
@@ -28,7 +29,7 @@
 	<header class="header">
 		<div class="container">
 		<!--	 <a href="index.html" class="navbar-brand logo"><img class="img-fluid" src="./images/logo.png" /></a>-->
-			<a href="index.html" class="main-logo">LCB</a>
+			<a href="index.html" class="main-logo"><img src="./assets/img/lcb-dark.png" /></a>
 
 			<div class="main-nav float-right">
 				<ul class="menu">
@@ -43,6 +44,7 @@
 							<li><a href="portfolio-boxed.html">Boxed</a></li>
 							<li><a href="project.html">Project</a></li class="submenu">ul>-->
 					</li>
+					<li><a href="#clients" class="nav-scroll">Clients</a></li>
 					<li>
 						<a href="index.html#">Pages</a>
 						<ul class="submenu">
@@ -186,6 +188,20 @@
 				</div>
 				<a href="assets/works/008.jpg"></a>
 			</div>
+		</div>
+	</div>
+
+	<!-- client carousel -->
+	<div id="clients" class="clients">
+		<div class="owl-carousel client-slider">
+			<div class="item white-bg"><h4>Logo 1</h4></div>
+			<div class="item black-bg"><h4>Logo 2</h4></div>
+			<div class="item white-bg"><h4>Logo 3</h4></div>
+			<div class="item black-bg"><h4>Logo 4</h4></div>
+			<div class="item white-bg"><h4>Logo 5</h4></div>
+			<div class="item black-bg"><h4>Logo 6</h4></div>
+			<div class="item white-bg"><h4>Logo 7</h4></div>
+			<div class="item black-bg"><h4>Logo 8</h4></div>
 		</div>
 	</div>
 
