--- a/project.html
+++ b/project.html
@@ -12,6 +12,7 @@
 	<link rel="icon" href="assets/img/favicon.png">
 	<link rel="stylesheet" href="assets/css/assets.css">
 	<link rel="stylesheet" href="assets/css/main.css">
+	<link rel="stylesheet" href="./assets/css/custom-mohit.css">
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Work+Sans:400,500,700">
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Cardo:400,700">
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Ubuntu:400,700">
@@ -27,7 +28,7 @@
 	<!-- header -->
 	<header class="header">
 		<div class="container">
-			<a href="index.html" class="main-logo">LCB</a>
+			<a href="index.html" class="main-logo"><img src="./assets/img/lcb-dark.png" /></a>
 
 			<div class="main-nav float-right">
 				<ul class="menu">
